[gd_scene load_steps=89 format=3 uid="uid://cteoqg1uod6xu"]

[ext_resource type="Script" path="res://CelesteExample/Scripts/Player.gd" id="1_aixbp"]
[ext_resource type="Script" path="res://CelesteExample/Scripts/Hair.gd" id="2_6cnjm"]
[ext_resource type="Texture2D" uid="uid://dsw628xkivagm" path="res://CelesteExample/Assets/Celeste/haipixelr.png" id="4_b4amf"]
[ext_resource type="Texture2D" uid="uid://jtkh03fgsckl" path="res://CelesteExample/Assets/Celeste/hair.png" id="5_aqwwg"]
[ext_resource type="Shader" path="res://CelesteExample/Assets/Celeste/Hair/Outline.gdshader" id="6_d6sk8"]
[ext_resource type="Texture2D" uid="uid://dinxaprxndleh" path="res://CelesteExample/Assets/Celeste/Climb/climb00.png" id="7_l7a3d"]
[ext_resource type="Texture2D" uid="uid://cc2a7fxvyd7it" path="res://CelesteExample/Assets/Celeste/Edge/edge_back00.png" id="8_pvjym"]
[ext_resource type="Texture2D" uid="uid://bu6aq604a5e7j" path="res://CelesteExample/Assets/Celeste/Edge/edge_back01.png" id="9_24ljn"]
[ext_resource type="Texture2D" uid="uid://crw7n4kfbg78l" path="res://CelesteExample/Assets/Celeste/Edge/edge_back02.png" id="10_ijy6v"]
[ext_resource type="Texture2D" uid="uid://bkx7h4iilwug2" path="res://CelesteExample/Assets/Celeste/Edge/edge_back03.png" id="11_7uehu"]
[ext_resource type="Texture2D" uid="uid://b1l2wrbl1sstp" path="res://CelesteExample/Assets/Celeste/Edge/edge_back04.png" id="12_8hl1l"]
[ext_resource type="Texture2D" uid="uid://nsldwb1b40qv" path="res://CelesteExample/Assets/Celeste/Edge/edge_back05.png" id="13_l5evi"]
[ext_resource type="Texture2D" uid="uid://c16cf71sgs2w2" path="res://CelesteExample/Assets/Celeste/Edge/edge_back06.png" id="14_0g8aj"]
[ext_resource type="Texture2D" uid="uid://c4tx3vtp75mao" path="res://CelesteExample/Assets/Celeste/Edge/edge_back07.png" id="15_xka13"]
[ext_resource type="Texture2D" uid="uid://buhcwqm015gev" path="res://CelesteExample/Assets/Celeste/Edge/edge_back08.png" id="16_kk16q"]
[ext_resource type="Texture2D" uid="uid://bwwuj3skggb64" path="res://CelesteExample/Assets/Celeste/Edge/edge_back09.png" id="17_p4biv"]
[ext_resource type="Texture2D" uid="uid://b1skk2vo42cdu" path="res://CelesteExample/Assets/Celeste/Edge/edge_back10.png" id="18_ybf73"]
[ext_resource type="Texture2D" uid="uid://t1vxvo278kjb" path="res://CelesteExample/Assets/Celeste/Edge/edge_back11.png" id="19_k2m2c"]
[ext_resource type="Texture2D" uid="uid://bejgibsr0y5ic" path="res://CelesteExample/Assets/Celeste/Edge/edge_back12.png" id="20_n248y"]
[ext_resource type="Texture2D" uid="uid://577oisk3ryal" path="res://CelesteExample/Assets/Celeste/Edge/edge_back13.png" id="21_pabyj"]
[ext_resource type="Texture2D" uid="uid://dl34roupvwwyp" path="res://CelesteExample/Assets/Celeste/Fall/fall00.png" id="22_68u0m"]
[ext_resource type="Texture2D" uid="uid://cdx3yk0vxup3y" path="res://CelesteExample/Assets/Celeste/Fall/fall01.png" id="23_y3q0y"]
[ext_resource type="Texture2D" uid="uid://datjjd2m74qvv" path="res://CelesteExample/Assets/Celeste/Fall/fall02.png" id="24_5k2vy"]
[ext_resource type="Texture2D" uid="uid://c8bhcyvtevlhu" path="res://CelesteExample/Assets/Celeste/Fall/fall03.png" id="25_kavw8"]
[ext_resource type="Texture2D" uid="uid://1a7h8rq1ivik" path="res://CelesteExample/Assets/Celeste/Fall/fall04.png" id="26_1yy7e"]
[ext_resource type="Texture2D" uid="uid://5uupaifdke53" path="res://CelesteExample/Assets/Celeste/Fall/fall05.png" id="27_rhp6e"]
[ext_resource type="Texture2D" uid="uid://ddwps6msh1uh7" path="res://CelesteExample/Assets/Celeste/Fall/fall06.png" id="28_qjjbf"]
[ext_resource type="Texture2D" uid="uid://bn11gt4jc6v0k" path="res://CelesteExample/Assets/Celeste/Fall/fall07.png" id="29_lv5qn"]
[ext_resource type="Texture2D" uid="uid://klhufo1oots1" path="res://CelesteExample/Assets/Celeste/Flip/flip00.png" id="30_rc1t4"]
[ext_resource type="Texture2D" uid="uid://firlbwgj3b3r" path="res://CelesteExample/Assets/Celeste/Flip/flip01.png" id="31_vla5q"]
[ext_resource type="Texture2D" uid="uid://cbdpqq5dqdb1g" path="res://CelesteExample/Assets/Celeste/Flip/flip02.png" id="32_uj7a0"]
[ext_resource type="Texture2D" uid="uid://7qonpvdbaror" path="res://CelesteExample/Assets/Celeste/Flip/flip03.png" id="33_x3hpt"]
[ext_resource type="Texture2D" uid="uid://blm5ivxrp68t8" path="res://CelesteExample/Assets/Celeste/Flip/flip04.png" id="34_1jgw4"]
[ext_resource type="Texture2D" uid="uid://d1ejyn2hgwy53" path="res://CelesteExample/Assets/Celeste/Flip/flip05.png" id="35_qg7m0"]
[ext_resource type="Texture2D" uid="uid://c8rmh26k15a6g" path="res://CelesteExample/Assets/Celeste/Flip/flip06.png" id="36_l7jet"]
[ext_resource type="Texture2D" uid="uid://oivb0lulja3s" path="res://CelesteExample/Assets/Celeste/Flip/flip07.png" id="37_y06rx"]
[ext_resource type="Texture2D" uid="uid://4we8gfcr5ltp" path="res://CelesteExample/Assets/Celeste/Flip/flip08.png" id="38_r5d6f"]
[ext_resource type="Texture2D" uid="uid://bsvydcwg3x1nk" path="res://CelesteExample/Assets/Celeste/Idle/idle00.png" id="39_swei2"]
[ext_resource type="Texture2D" uid="uid://co2b84kuy0yu2" path="res://CelesteExample/Assets/Celeste/Idle/idle01.png" id="40_1ddjv"]
[ext_resource type="Texture2D" uid="uid://c66d2p54e0pqu" path="res://CelesteExample/Assets/Celeste/Idle/idle02.png" id="41_1tyq2"]
[ext_resource type="Texture2D" uid="uid://dwirihtxnbbkm" path="res://CelesteExample/Assets/Celeste/Idle/idle03.png" id="42_qb2d8"]
[ext_resource type="Texture2D" uid="uid://68n3webvoibp" path="res://CelesteExample/Assets/Celeste/Idle/idle04.png" id="43_etffi"]
[ext_resource type="Texture2D" uid="uid://crl1cg0y11pnv" path="res://CelesteExample/Assets/Celeste/Idle/idle05.png" id="44_sfkw0"]
[ext_resource type="Texture2D" uid="uid://b72d4m6wmb2ai" path="res://CelesteExample/Assets/Celeste/Idle/idle06.png" id="45_1ct2h"]
[ext_resource type="Texture2D" uid="uid://c5sdtnx3jbh8m" path="res://CelesteExample/Assets/Celeste/Idle/idle07.png" id="46_cqbm6"]
[ext_resource type="Texture2D" uid="uid://dleabpu0mqjsa" path="res://CelesteExample/Assets/Celeste/Idle/idle08.png" id="47_qne0x"]
[ext_resource type="Texture2D" uid="uid://dwg3h0vhjaqs8" path="res://CelesteExample/Assets/Celeste/Jump/jumpSlow00.png" id="48_0vc2o"]
[ext_resource type="Texture2D" uid="uid://bkr5qb7r773mg" path="res://CelesteExample/Assets/Celeste/Jump/jumpSlow01.png" id="49_2g6n0"]
[ext_resource type="Texture2D" uid="uid://uqysjovmww2i" path="res://CelesteExample/Assets/Celeste/Jump/jumpSlow02.png" id="50_f0vly"]
[ext_resource type="Texture2D" uid="uid://jqhyeu0jdk1b" path="res://CelesteExample/Assets/Celeste/Jump/jumpSlow03.png" id="51_yqk4k"]
[ext_resource type="Texture2D" uid="uid://uh6iwuaseqab" path="res://CelesteExample/Assets/Celeste/Walk/walk01.png" id="52_insrn"]
[ext_resource type="Texture2D" uid="uid://hf7s88b6f1gv" path="res://CelesteExample/Assets/Celeste/Walk/walk02.png" id="53_qnhvk"]
[ext_resource type="Texture2D" uid="uid://dqtgtpkbkoc32" path="res://CelesteExample/Assets/Celeste/Walk/walk03.png" id="54_0m043"]
[ext_resource type="Texture2D" uid="uid://u8t5luplreyq" path="res://CelesteExample/Assets/Celeste/Walk/walk04.png" id="55_7fabm"]
[ext_resource type="Texture2D" uid="uid://qrdwjvycaox1" path="res://CelesteExample/Assets/Celeste/Walk/walk05.png" id="56_m03a1"]
[ext_resource type="Texture2D" uid="uid://by2cacyqv4jlu" path="res://CelesteExample/Assets/Celeste/Walk/walk06.png" id="57_5ympg"]
[ext_resource type="Texture2D" uid="uid://ciqfw5pac3s0b" path="res://CelesteExample/Assets/Celeste/Walk/walk07.png" id="58_b88rk"]
[ext_resource type="Texture2D" uid="uid://ciaawcij56ksh" path="res://CelesteExample/Assets/Celeste/Walk/walk08.png" id="59_ev6nf"]
[ext_resource type="Texture2D" uid="uid://bs2p67y014qky" path="res://CelesteExample/Assets/Celeste/Walk/walk09.png" id="60_kntyi"]
[ext_resource type="Texture2D" uid="uid://c4x468ykljned" path="res://CelesteExample/Assets/Celeste/Walk/walk10.png" id="61_dakxv"]
[ext_resource type="Script" path="res://Utils/StateSystem/Scripts/StateMachine.gd" id="62_gv8l3"]
[ext_resource type="Texture2D" uid="uid://bvljrsvi1e7ny" path="res://CelesteExample/Assets/Celeste/Walk/walk11.png" id="62_x5rcn"]
[ext_resource type="Script" path="res://CelesteExample/States/idle.gd" id="64_xpy0f"]
[ext_resource type="Script" path="res://CelesteExample/States/run.gd" id="65_qn70s"]
[ext_resource type="Script" path="res://CelesteExample/States/jump.gd" id="66_2wr1d"]
[ext_resource type="Script" path="res://CelesteExample/States/fall.gd" id="67_rp4rm"]
[ext_resource type="Script" path="res://CelesteExample/States/flip.gd" id="68_0sx0p"]
[ext_resource type="Script" path="res://CelesteExample/States/climb.gd" id="69_iy1me"]

[sub_resource type="Shader" id="Shader_mn0lr"]
code = "shader_type canvas_item;
uniform vec3 color:source_color;
render_mode blend_add;
void fragment() {
	if (COLOR.a > 0.0) {
		COLOR = vec4(color, COLOR.a);
	} 
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xxvm4"]
shader = SubResource("Shader_mn0lr")
shader_parameter/color = Color(0.207843, 0.564706, 0.823529, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_qvg37"]
viewport_path = NodePath("DashEffect/DashEffects")

[sub_resource type="Curve" id="Curve_sydf5"]
_data = [Vector2(0, 0.487544), 0.0, 0.0, 0, 0, Vector2(0.549279, 1), -0.0989701, 0.0, 0, 0]
point_count = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lmj3t"]
shader = ExtResource("6_d6sk8")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="ViewportTexture" id="ViewportTexture_j6xl5"]
viewport_path = NodePath("Hair/SubViewport")

[sub_resource type="SpriteFrames" id="SpriteFrames_rnino"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_l7a3d")
}],
"loop": true,
"name": &"climb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_pvjym")
}, {
"duration": 1.0,
"texture": ExtResource("9_24ljn")
}, {
"duration": 1.0,
"texture": ExtResource("10_ijy6v")
}, {
"duration": 1.0,
"texture": ExtResource("11_7uehu")
}, {
"duration": 1.0,
"texture": ExtResource("12_8hl1l")
}, {
"duration": 1.0,
"texture": ExtResource("13_l5evi")
}, {
"duration": 1.0,
"texture": ExtResource("14_0g8aj")
}, {
"duration": 1.0,
"texture": ExtResource("15_xka13")
}, {
"duration": 1.0,
"texture": ExtResource("16_kk16q")
}, {
"duration": 1.0,
"texture": ExtResource("17_p4biv")
}, {
"duration": 1.0,
"texture": ExtResource("18_ybf73")
}, {
"duration": 1.0,
"texture": ExtResource("19_k2m2c")
}, {
"duration": 1.0,
"texture": ExtResource("20_n248y")
}, {
"duration": 1.0,
"texture": ExtResource("21_pabyj")
}],
"loop": true,
"name": &"edge",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_68u0m")
}, {
"duration": 1.0,
"texture": ExtResource("23_y3q0y")
}, {
"duration": 1.0,
"texture": ExtResource("24_5k2vy")
}, {
"duration": 1.0,
"texture": ExtResource("25_kavw8")
}, {
"duration": 1.0,
"texture": ExtResource("26_1yy7e")
}, {
"duration": 1.0,
"texture": ExtResource("27_rhp6e")
}, {
"duration": 1.0,
"texture": ExtResource("28_qjjbf")
}, {
"duration": 1.0,
"texture": ExtResource("29_lv5qn")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_rc1t4")
}, {
"duration": 1.0,
"texture": ExtResource("31_vla5q")
}, {
"duration": 1.0,
"texture": ExtResource("32_uj7a0")
}, {
"duration": 1.0,
"texture": ExtResource("33_x3hpt")
}, {
"duration": 1.0,
"texture": ExtResource("34_1jgw4")
}, {
"duration": 1.0,
"texture": ExtResource("35_qg7m0")
}, {
"duration": 1.0,
"texture": ExtResource("36_l7jet")
}, {
"duration": 1.0,
"texture": ExtResource("37_y06rx")
}, {
"duration": 1.0,
"texture": ExtResource("38_r5d6f")
}],
"loop": true,
"name": &"flip",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("39_swei2")
}, {
"duration": 1.0,
"texture": ExtResource("40_1ddjv")
}, {
"duration": 1.0,
"texture": ExtResource("41_1tyq2")
}, {
"duration": 1.0,
"texture": ExtResource("42_qb2d8")
}, {
"duration": 1.0,
"texture": ExtResource("43_etffi")
}, {
"duration": 1.0,
"texture": ExtResource("44_sfkw0")
}, {
"duration": 1.0,
"texture": ExtResource("45_1ct2h")
}, {
"duration": 1.0,
"texture": ExtResource("46_cqbm6")
}, {
"duration": 1.0,
"texture": ExtResource("47_qne0x")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("48_0vc2o")
}, {
"duration": 1.0,
"texture": ExtResource("49_2g6n0")
}, {
"duration": 1.0,
"texture": ExtResource("50_f0vly")
}, {
"duration": 1.0,
"texture": ExtResource("51_yqk4k")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("52_insrn")
}, {
"duration": 1.0,
"texture": ExtResource("53_qnhvk")
}, {
"duration": 1.0,
"texture": ExtResource("54_0m043")
}, {
"duration": 1.0,
"texture": ExtResource("55_7fabm")
}, {
"duration": 1.0,
"texture": ExtResource("56_m03a1")
}, {
"duration": 1.0,
"texture": ExtResource("57_5ympg")
}, {
"duration": 1.0,
"texture": ExtResource("58_b88rk")
}, {
"duration": 1.0,
"texture": ExtResource("59_ev6nf")
}, {
"duration": 1.0,
"texture": ExtResource("60_kntyi")
}, {
"duration": 1.0,
"texture": ExtResource("61_dakxv")
}, {
"duration": 1.0,
"texture": ExtResource("62_x5rcn")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6yv00"]
size = Vector2(8, 8)

[sub_resource type="Animation" id="Animation_xotkg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hair/Hairpivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -11)]
}

[sub_resource type="Animation" id="Animation_1uiwo"]
resource_name = "climb"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"climb"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hair/Hairpivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(1, -11)]
}

[sub_resource type="Animation" id="Animation_lpfbs"]
resource_name = "edge"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"edge"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hair/Hairpivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.9, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(2, -11), Vector2(2, -11), Vector2(1, -11), Vector2(1, -10), Vector2(0, -11), Vector2(1, -11), Vector2(2, -11), Vector2(1, -11), Vector2(2, -11), Vector2(3, -10), Vector2(3, -11)]
}

[sub_resource type="Animation" id="Animation_u8cg2"]
resource_name = "fall"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fall"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hair/Hairpivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(1, -11), Vector2(1, -11)]
}

[sub_resource type="Animation" id="Animation_ewn37"]
resource_name = "flip"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"flip"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_o7i2j"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hair/Hairpivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, -11), Vector2(0, -10)]
}

[sub_resource type="Animation" id="Animation_6yi35"]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hair/Hairpivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(1, -12), Vector2(1, -11), Vector2(0, -11)]
}

[sub_resource type="Animation" id="Animation_rnten"]
resource_name = "run"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hair/Hairpivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(1, -10), Vector2(1, -11), Vector2(1, -10), Vector2(1, -11)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i6fbd"]
_data = {
"RESET": SubResource("Animation_xotkg"),
"climb": SubResource("Animation_1uiwo"),
"edge": SubResource("Animation_lpfbs"),
"fall": SubResource("Animation_u8cg2"),
"flip": SubResource("Animation_ewn37"),
"idle": SubResource("Animation_o7i2j"),
"jump": SubResource("Animation_6yi35"),
"run": SubResource("Animation_rnten")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_5k08h"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_8a0rl"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.514742, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.17268, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_oyb4y"]
offsets = PackedFloat32Array(0, 0.558442, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.942857, 1, 1, 1, 0)

[node name="CharacterController2D" type="CharacterBody2D" groups=["player"]]
z_index = 1
script = ExtResource("1_aixbp")

[node name="DashEffect" type="Node2D" parent="."]
top_level = true

[node name="DashEffects" type="SubViewport" parent="DashEffect"]
transparent_bg = true
canvas_item_default_texture_filter = 0
size = Vector2i(320, 180)

[node name="ShaderEffect" type="Sprite2D" parent="DashEffect"]
material = SubResource("ShaderMaterial_xxvm4")
position = Vector2(160, 90)
texture = SubResource("ViewportTexture_qvg37")

[node name="Hair" type="Node2D" parent="."]
script = ExtResource("2_6cnjm")
Length = 6

[node name="SubViewport" type="SubViewport" parent="Hair"]
disable_3d = true
transparent_bg = true
canvas_item_default_texture_filter = 0
size = Vector2i(24, 24)

[node name="Hair" type="Line2D" parent="Hair/SubViewport"]
clip_children = 2
position = Vector2(15.465, 10.525)
points = PackedVector2Array(0, 0, -10, 6)
width = 6.0
width_curve = SubResource("Curve_sydf5")
texture = ExtResource("4_b4amf")
texture_mode = 2

[node name="hairbase" type="Sprite2D" parent="Hair/SubViewport"]
texture = ExtResource("5_aqwwg")
offset = Vector2(12.415, 12.135)

[node name="ViewportHair" type="Sprite2D" parent="Hair"]
material = SubResource("ShaderMaterial_lmj3t")
position = Vector2(0, -12)
texture = SubResource("ViewportTexture_j6xl5")

[node name="Hairpivot" type="Marker2D" parent="Hair"]
position = Vector2(1, -11)

[node name="Player" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rnino")
animation = &"idle"
speed_scale = 0.0
offset = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_6yv00")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i6fbd")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("62_gv8l3")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="StateMachine"]
script = ExtResource("64_xpy0f")

[node name="run" type="Node" parent="StateMachine"]
script = ExtResource("65_qn70s")

[node name="jump" type="Node" parent="StateMachine"]
script = ExtResource("66_2wr1d")

[node name="fall" type="Node" parent="StateMachine"]
script = ExtResource("67_rp4rm")

[node name="flip" type="Node" parent="StateMachine"]
script = ExtResource("68_0sx0p")

[node name="climb" type="Node" parent="StateMachine"]
script = ExtResource("69_iy1me")

[node name="DashParticle" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_5k08h")
position = Vector2(0, -6)
emitting = false
amount = 16
emission_shape = 3
emission_rect_extents = Vector2(3, 3)
spread = 15.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 5.0
scale_amount_curve = SubResource("Curve_8a0rl")
color = Color(0.266667, 0.803922, 1, 1)
color_ramp = SubResource("Gradient_oyb4y")

[connection signal="animation_started" from="AnimationPlayer" to="Hair" method="_on_animation_player_animation_started"]
